--- a/translations/kangyur/placeholders/043-013_toh76-the_sutra_of_asokadattas_prophecy.xml
+++ b/translations/kangyur/placeholders/043-013_toh76-the_sutra_of_asokadattas_prophecy.xml
@@ -19,11 +19,11 @@
                 <editor role="projectEditor" xml:id="UT22084-043-013-36">David Fiordalis</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.14 <date>2023</date>
+                <edition>v 0.0.15 <date>2023</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.b"/>
+                <availability status="2.a"/>
                 <idno xml:id="UT22084-043-013"/>
                 <date/>
             </publicationStmt>
@@ -101,6 +101,12 @@
                     <desc>2.b</desc>
                 </change>
                 <change who="#line-tofte" when="2023-12-07T08:06:49.585Z" type="text-version" status="0.0.14" xml:id="UT22084-043-013-39">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-12-13T10:38:37.639Z" type="translation-status" status="2.a" xml:id="UT22084-043-013-40">
+                    <desc>2.a</desc>
+                </change>
+                <change who="#line-tofte" when="2023-12-13T10:38:37.639Z" type="text-version" status="0.0.15" xml:id="UT22084-043-013-41">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
