--- a/translations/kangyur/placeholders/071-002_toh288-the_great_sutra_of_illusions_net.xml
+++ b/translations/kangyur/placeholders/071-002_toh288-the_great_sutra_of_illusions_net.xml
@@ -5,22 +5,24 @@
         <fileDesc>
             <titleStmt>
                 <title type="mainTitle" xml:lang="en">The Great Sūtra of Illusion's Net</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">māyājālasūtra</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Māyājālasūtra</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">mdo chen sgyu ma'i dra ba/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">māyājālanāmamahāsūtra</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Māyājālanāmamahāsūtra</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">mdo chen sgyu ma'i dra ba zhes bya ba</title>
-                <author role="translatorMain" ref="eft:team-9"/>
-                <author role="translatorEng" ref="eft:person-72">Oriane Lavolé</author>
-                <editor role="reviser" ref="eft:person-274">Adam Krug</editor>
-                <consultant role="projectManager" ref="eft:person-50">Andreas Doctor</consultant>
-                <editor role="projectEditor" ref="eft:person-289">Nathaniel Rich</editor>
+                <author role="translatorMain" xml:id="UT22084-071-002-1">Dharmachakra Translation Committee</author>
+                <author role="translatorEng" xml:id="UT22084-071-002-2">Oriane Lavolé</author>
+                <editor role="reviser" xml:id="UT22084-071-002-3">Adam Krug</editor>
+                <consultant role="projectManager" xml:id="UT22084-071-002-4">Andreas Doctor</consultant>
+                <editor role="projectEditor" xml:id="UT22084-071-002-5">Nathaniel Rich</editor>
+                <editor role="projectEditor" xml:id="UT22084-071-002-21">John Canti</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.5 <date>2020</date>
+                <edition>v 0.0.8 <date>2023</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="2.f">
+            <publicationStmt>
+                <availability status="2.d"/>
                 <idno xml:id="UT22084-071-002"/>
                 <date/>
             </publicationStmt>
@@ -35,18 +37,48 @@
                     <idno source-id="O1JC114941JC11953" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2023-03-17T09:24:50.34Z" user="admin">17/03/2023 09:24:50</note>
-                <note type="updated" update="text-version" value="" date-time="2019-04-29T17:15:40.869Z" user="john"/>
-                <note type="updated" update="text-version" value="0.0.1" date-time="2020-02-11T09:35:06.396Z" user="andreas">0.0.1</note>
-                <note type="updated" update="translation-status" value="2.h" date-time="2020-02-11T09:35:06.396Z" user="andreas">2.h</note>
-                <note type="updated" update="text-version" value="0.0.2" date-time="2022-07-11T12:14:28.696Z" user="line-tofte">Auto (update-contributors)</note>
-                <note type="updated" update="translation-status" value="2.g" date-time="2022-07-15T14:49:07.006Z" user="line-tofte">2.g</note>
-                <note type="updated" update="text-version" value="0.0.3" date-time="2022-07-15T14:49:07.006Z" user="line-tofte">Auto (update-publication-status)</note>
-                <note type="updated" update="text-version" value="0.0.4" date-time="2022-07-15T14:49:47.544Z" user="line-tofte">Auto (update-contributors)</note>
-                <note type="updated" update="translation-status" value="2.f" date-time="2023-03-17T09:24:46.106Z" user="line-tofte">2.f</note>
-                <note type="updated" update="text-version" value="0.0.5" date-time="2023-03-17T09:24:46.106Z" user="line-tofte">Auto (update-publication-status)</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#john" when="2019-04-29T17:15:40.869Z" type="text-version" status="" xml:id="UT22084-071-002-6">
+                    <desc/>
+                </change>
+                <change who="#andreas" when="2020-02-11T09:35:06.396Z" type="text-version" status="0.0.1" xml:id="UT22084-071-002-7">
+                    <desc>0.0.1</desc>
+                </change>
+                <change who="#andreas" when="2020-02-11T09:35:06.396Z" type="translation-status" status="2.h" xml:id="UT22084-071-002-8">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2022-07-11T12:14:28.696Z" type="text-version" status="0.0.2" xml:id="UT22084-071-002-9">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2022-07-15T14:49:07.006Z" type="translation-status" status="2.g" xml:id="UT22084-071-002-10">
+                    <desc>2.g</desc>
+                </change>
+                <change who="#line-tofte" when="2022-07-15T14:49:07.006Z" type="text-version" status="0.0.3" xml:id="UT22084-071-002-11">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2022-07-15T14:49:47.544Z" type="text-version" status="0.0.4" xml:id="UT22084-071-002-12">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-03-17T09:24:46.106Z" type="translation-status" status="2.f" xml:id="UT22084-071-002-13">
+                    <desc>2.f</desc>
+                </change>
+                <change who="#line-tofte" when="2023-03-17T09:24:46.106Z" type="text-version" status="0.0.5" xml:id="UT22084-071-002-14">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.6" xml:id="UT22084-071-002-15">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-09T12:48:03.928Z" type="text-version" status="0.0.7" xml:id="UT22084-071-002-22">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-12-13T11:33:27.272Z" type="translation-status" status="2.d" xml:id="UT22084-071-002-23">
+                    <desc>2.d</desc>
+                </change>
+                <change who="#line-tofte" when="2023-12-13T11:33:27.272Z" type="text-version" status="0.0.8" xml:id="UT22084-071-002-24">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
