--- a/translations/kangyur/placeholders/055-002_toh128-the_illuminating_appearance_of_all_things_distinctly_without_their_departing_from_their_essential_nature_emptiness.xml
+++ b/translations/kangyur/placeholders/055-002_toh128-the_illuminating_appearance_of_all_things_distinctly_without_their_departing_from_their_essential_nature_emptiness.xml
@@ -20,12 +20,12 @@
                 <editor role="copyEditor" xml:id="UT22084-055-002-38">Dawn Collins</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.13 <date>2023</date>
+                <edition>v 0.0.14 <date>2023</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.d"/>
+                <availability status="2.c"/>
                 <idno xml:id="UT22084-055-002"/>
                 <date/>
             </publicationStmt>
@@ -100,6 +100,12 @@
                     <desc>2.d</desc>
                 </change>
                 <change who="#line-tofte" when="2023-11-29T15:00:06.43Z" type="text-version" status="0.0.13" xml:id="UT22084-055-002-41">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-12-13T13:23:11.085Z" type="translation-status" status="2.c" xml:id="UT22084-055-002-42">
+                    <desc>2.c</desc>
+                </change>
+                <change who="#line-tofte" when="2023-12-13T13:23:11.085Z" type="text-version" status="0.0.14" xml:id="UT22084-055-002-43">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
