--- a/translations/kangyur/translations/090-035_toh591-the_supreme_accomplishment_of_invincible_averting_sitatapatra_born_from_the_usnisa_of_the_tathagata.xml
+++ b/translations/kangyur/translations/090-035_toh591-the_supreme_accomplishment_of_invincible_averting_sitatapatra_born_from_the_usnisa_of_the_tathagata.xml
@@ -39,7 +39,7 @@
         <author role="translatorEng" xml:id="UT22084-090-035-377">Roger Espel Llima</author>
       </titleStmt>
       <editionStmt>
-                <edition>v 1.0.9 <date>2023</date>
+                <edition>v 1.0.10 <date>2023</date>
                 </edition>
             </editionStmt>
       <publicationStmt>
@@ -203,6 +203,9 @@
                 </change>
                 <change who="#martina-cotter" when="2023-11-08T13:35:46.056Z" type="text-version" status="1.0.9" xml:id="UT22084-090-035-419">
                     <desc>Updated typo.</desc>
+                </change>
+                <change who="#celso" when="2023-12-14T18:47:07.748Z" type="text-version" status="1.0.10" xml:id="UT22084-090-035-420">
+                    <desc>added some soft hyphens to glossary</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
@@ -708,13 +711,13 @@
           <milestone unit="chunk" xml:id="UT22084-090-035-65"/>
           <lg tid="46">
             <l>“Homage to the blessed, thus-gone, worthy, completely perfect Buddha
-              Dṛḍhaśūraraṇasenapraharaṇarāja.</l>
+              Dṛḍha­śūraraṇasena­praharaṇa­rāja.</l>
             <l>Homage to the blessed, thus-gone, worthy, completely perfect Buddha Amitābha.</l>
             <l>Homage to the blessed, thus-gone, worthy, completely perfect Buddha Akṣobhya.</l>
             <l>Homage to the blessed, thus-gone, worthy, completely perfect Buddha
-              Bhaiṣajyaguruvaiḍūryaprabharāja.</l>
+              Bhaiṣajya­guru­vaiḍūrya­prabha­rāja.</l>
             <l>Homage to the blessed, thus-gone, worthy, completely perfect Buddha
-              Supuṣpitaśālendrārāja.</l>
+              Supuṣpita­śālendrā­rāja.</l>
             <l>Homage to the blessed, thus-gone, worthy, completely perfect Buddha Śākyamuni.</l>
             <l>Homage to the blessed, thus-gone, worthy, completely perfect Buddha
               Ratnaketurāja.</l>
@@ -722,7 +725,7 @@
             <l>Homage to the blessed, thus-gone, worthy, completely perfect Buddha Vairocana. <ref cRef="F.214.a" type="folio" xml:id="UT22084-090-035-351"/>
                         </l>
             <l>Homage to the blessed, thus-gone, worthy, completely perfect Buddha
-                Vikasitanetrotpalagandhaketurāja.<note place="end" xml:id="UT22084-090-035-66"> This
+                Vikasita­netrotpala­gandha­ketu­rāja.<note place="end" xml:id="UT22084-090-035-66"> This
                 Sanskrit rendering is tentative, as the Tibetan term used here differs slightly from
                 the Sanskrit sources. All Sanskrit sources consulted have
                 Vikasitakamalotpalagandhaketurāja, a term that aligns with the Tibetan translation
@@ -1449,7 +1452,7 @@
           <bibl xml:id="UT22084-090-035-186">Phangthangma (<title xml:lang="Bo-Ltn">dkar chag ’phang
               thang ma</title>). Beijing: mi rigs dpe skrun khang, 2003.</bibl>
           <bibl xml:id="UT22084-090-035-187">
-                        <ref target="https://www.istb.univie.ac.at/kanjur/rktsneu/digit/afficheBNF.php?vol=PT45&amp;beg=4">Pelliot tibétain 45</ref>. Bibliothèque nationale de France, Paris. <title xml:lang="en">Resources for Kanjur and Tenjur Studies</title>, Universität Wien.
+                        <ref target="https://www.istb.univie.ac.at/kanjur/rktsneu/digit/afficheBNF.php?vol=PT45&amp;beg=4">Pelliot tibétain 45</ref>. Bibliothèque nationale de France, Paris. <title xml:lang="en">Resources for Kanjur and Tanjur Studies</title>, Universität Wien.
             Accessed July 26, 2022.</bibl>
           <bibl xml:id="UT22084-090-035-188">Dudjom Jikdral Yeshé Dorjé (bdud ’joms ’jigs bral ye
             shes rdo rje). <title xml:lang="Bo-Ltn">gtsug tor gdugs dkar mo’i rgyun khyer ’bar ba’i
@@ -2509,8 +2512,8 @@
                     </item>
           <item>
                         <gloss type="person" xml:id="UT22084-090-035-288">
-                            <term type="translationMain">Dṛḍhaśūraraṇasenapraharaṇarāja</term>
-                            <term xml:lang="Sa-Ltn" type="sourceUnspecified">dṛḍhaśūraraṇasena­praharaṇarāja</term>
+                            <term type="translationMain">Dṛḍha­śūraraṇasena­praharaṇa­rāja</term>
+            <term xml:lang="Sa-Ltn" type="sourceUnspecified">dṛḍha­śūraraṇasena­praharaṇa­rāja</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1">dpa’ brtan pa’i sde mtshon cha’i rgyal po</term>
                             <term xml:lang="bo" type="attestedSource" n="1">དཔའ་བརྟན་པའི་སྡེ་མཚོན་ཆའི་རྒྱལ་པོ།</term>
                             <note type="definition">
@@ -2544,8 +2547,8 @@
           </item>
           <item>
                         <gloss type="person" xml:id="UT22084-090-035-291">
-                            <term type="translationMain">Bhaiṣajyaguruvaiḍūryaprabharāja</term>
-                            <term xml:lang="Sa-Ltn" type="sourceUnspecified">bhaiṣajya­guruvaiḍūrya­prabharāja</term>
+                            <term type="translationMain">Bhaiṣajya­guru­vaiḍūrya­prabha­rāja</term>
+            <term xml:lang="Sa-Ltn" type="sourceUnspecified">bhaiṣajya­guru­vaiḍūrya­prabha­rāja</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1">sman gyi bla bai DUr+ya’i ’od kyi rgyal po</term>
                             <term xml:lang="bo" type="attestedSource" n="1">སྨན་གྱི་བླ་བཻ་ཌཱུརྱའི་འོད་ཀྱི་རྒྱལ་པོ།</term>
                             <note type="definition">
@@ -2556,7 +2559,7 @@
                     </item>
           <item>
                         <gloss type="person" xml:id="UT22084-090-035-292">
-                            <term type="translationMain">Supuṣpitaśālendrārāja</term>
+                            <term type="translationMain">Supuṣpita­śālendrā­rāja</term>
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified">supuṣpita­śālendrā­rāja</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1">sA la’i dbang po’i rgyal po me tog kun tu rgyas pa</term>
                             <term xml:lang="bo" type="attestedSource" n="1">སཱ་ལའི་དབང་པོའི་རྒྱལ་པོ་མེ་ཏོག་ཀུན་ཏུ་རྒྱས་པ།</term>
@@ -2613,8 +2616,8 @@
                     </item>
           <item>
                         <gloss type="person" xml:id="UT22084-090-035-297">
-                            <term type="translationMain">Vikasitanetrotpalagandhaketurāja</term>
-                            <term xml:lang="Sa-Ltn" type="sourceUnspecified">vikasitanetrotpalagandhaketu­rāja</term>
+                            <term type="translationMain">Vikasita­netrotpala­gandha­ketu­rāja</term>
+            <term xml:lang="Sa-Ltn" type="sourceUnspecified">vikasita­netrotpala­gandha­ketu­rāja</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1">spyan rgyas pa ut+pa la’i dri’i tog gi rgyal po</term>
                             <term xml:lang="bo" type="attestedSource" n="1">སྤྱན་རྒྱས་པ་ཨུཏྤ་ལའི་དྲིའི་ཏོག་གི་རྒྱལ་པོ།</term>
                             <note type="definition">
