--- a/translations/kangyur/placeholders/056-004_toh136-the_sutra_on_the_samadhi_of_the_four_youths.xml
+++ b/translations/kangyur/placeholders/056-004_toh136-the_sutra_on_the_samadhi_of_the_four_youths.xml
@@ -22,12 +22,12 @@
                 <sponsor xml:id="UT22084-056-004-8">Li Yu Hua, Zhu Yuan Guo, Rachel Zhou, Grace Zhu</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.17 <date>2023</date>
+                <edition>v 0.0.18 <date>2023</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.b"/>
+                <availability status="2.a"/>
                 <idno xml:id="UT22084-056-004"/>
                 <date/>
             </publicationStmt>
@@ -117,6 +117,12 @@
                     <desc>2.b</desc>
                 </change>
                 <change who="#line-tofte" when="2023-12-13T10:56:58.997Z" type="text-version" status="0.0.17" xml:id="UT22084-056-004-50">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-12-21T15:30:47.903Z" type="translation-status" status="2.a" xml:id="UT22084-056-004-51">
+                    <desc>2.a</desc>
+                </change>
+                <change who="#line-tofte" when="2023-12-21T15:30:47.903Z" type="text-version" status="0.0.18" xml:id="UT22084-056-004-52">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
