--- a/translations/kangyur/placeholders/096-010_toh761-the_incantation_of_lohatunda.xml
+++ b/translations/kangyur/placeholders/096-010_toh761-the_incantation_of_lohatunda.xml
@@ -4,17 +4,20 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">lcags mchu'i gzungs/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">lohatuṇḍadhāraṇī</title>
                 <title type="mainTitle" xml:lang="en">The Dhāraṇī of Lohatuṇḍa</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Lohatuṇḍadhāraṇī</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">lcags mchu'i gzungs/</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Āryalohatuṇḍanāmadhāraṇī</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa lcags mchu zhes bya ba'i gzungs/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">āryalohatuṇḍanāmadhāraṇī</title>
+                <author role="translatorMain" xml:id="UT22084-096-010-1"/>
+                <author role="translatorEng" xml:id="UT22084-096-010-2">Lowell Cook</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2023</date>
+                <edition>v 0.0.4 <date>2023</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="3">
+            <publicationStmt>
+                <availability status="2.h"/>
                 <idno xml:id="UT22084-096-010"/>
                 <date/>
             </publicationStmt>
@@ -29,9 +32,27 @@
                     <idno source-id="O1JC114941JC12507" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2023-03-14T08:48:34.796Z" user="admin">14/03/2023 08:48:34</note>    <note type="updated" update="translation-status" value="3" date-time="2023-03-14T08:48:30.505Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2023-03-14T08:48:30.505Z" user="line-tofte">0.0.1</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#line-tofte" when="2023-03-14T08:48:30.505Z" type="translation-status" status="3" xml:id="UT22084-096-010-3">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2023-03-14T08:48:30.505Z" type="text-version" status="0.0.1" xml:id="UT22084-096-010-4">
+                    <desc>0.0.1</desc>
+                </change>
+                <change who="#line-tofte" when="2023-03-14T08:49:10.003Z" type="text-version" status="0.0.2" xml:id="UT22084-096-010-5">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.3" xml:id="UT22084-096-010-6">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-12-22T10:18:21.225Z" type="translation-status" status="2.h" xml:id="UT22084-096-010-7">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2023-12-22T10:18:21.225Z" type="text-version" status="0.0.4" xml:id="UT22084-096-010-8">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
