--- a/translations/kangyur/placeholders/096-011_toh762-the_incantation_of_lohatunda.xml
+++ b/translations/kangyur/placeholders/096-011_toh762-the_incantation_of_lohatunda.xml
@@ -5,12 +5,17 @@
         <fileDesc>
             <titleStmt>
                 <title type="mainTitle" xml:lang="Bo-Ltn">lcags mchu'i gzungs/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">lohatuṇḍadhāraṇī</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Lohatuṇḍadhāraṇī</title>
                 <title type="mainTitle" xml:lang="en">The Dhāraṇī of Lohatuṇḍa</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa lcags kyi mchu zhes bya ba'i gzungs/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">āryalohatuṇḍanāmadhāraṇī</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Āryalohatuṇḍanāmadhāraṇī</title>
             </titleStmt>
-            <publicationStmt status="">
+            <editionStmt>
+                <edition>v 0.0.1 <date>2023</date>
+                </edition>
+            </editionStmt>
+            <publicationStmt>
+                <availability status="2.h"/>
                 <idno xml:id="UT22084-096-011"/>
             </publicationStmt>
             <sourceDesc>
@@ -24,9 +29,19 @@
                     <idno source-id="O1JC114941JC12508" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2021-09-23T17:36:06.631Z" user="celso">23/09/2021 17:36:06</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+            
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.1" xml:id="UT22084-096-011-1">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-12-22T10:23:59.236Z" type="translation-status" status="2.h" xml:id="UT22084-096-011-2">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2023-12-22T10:23:59.236Z" type="text-version" status="0.0.1" xml:id="UT22084-096-011-3">
+                    <desc>User set version to 0.0.1</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
