--- a/translations/kangyur/placeholders/091-006_toh609,925-the_incantation_that_confers_fearlessness.xml
+++ b/translations/kangyur/placeholders/091-006_toh609,925-the_incantation_that_confers_fearlessness.xml
@@ -4,20 +4,20 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">mi 'jigs pa rab tu sbyin pa'i gzungs/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">Sarvābhayapradā dhāraṇī</title>
                 <title type="mainTitle" xml:lang="en">The Dhāraṇī that Confers Fearlessness</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa thams cad la mi 'jigs pa rab tu sbyin pa zhes bya ba'i gzungs/</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Sarvābhayapradā dhāraṇī</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">mi 'jigs pa rab tu sbyin pa'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">Āryasarvābhayapradānāmadhāraṇī</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa thams cad la mi 'jigs pa rab tu sbyin pa zhes bya ba'i gzungs/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">Āryasarvābhayapradānāmadhāraṇī</title>
+                <author role="translatorMain" xml:id="UT22084-091-006-4">84000 Associate Translators</author>
+                <author role="translatorEng" xml:id="UT22084-091-006-5">Lowell Cook</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2023</date>
+                <edition>v 0.0.3 <date>2023</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="3"/>
+                <availability status="2.h"/>
                 <idno xml:id="UT22084-091-006"/>
             </publicationStmt>
             <sourceDesc>
@@ -51,6 +51,15 @@
                 </change>
                 <change who="#line-tofte" when="2023-11-20T08:18:57.442Z" type="text-version" status="0.0.1" xml:id="UT22084-091-006-3">
                     <desc>User set version to 0.0.1</desc>
+                </change>
+                <change who="#line-tofte" when="2023-11-20T08:21:12.575Z" type="text-version" status="0.0.2" xml:id="UT22084-091-006-6">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-12-22T10:27:35.06Z" type="translation-status" status="2.h" xml:id="UT22084-091-006-7">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2023-12-22T10:27:35.06Z" type="text-version" status="0.0.3" xml:id="UT22084-091-006-8">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
