--- a/translations/kangyur/translations/091-062_toh665,1084-the_essence_of_ganapati.xml
+++ b/translations/kangyur/translations/091-062_toh665,1084-the_essence_of_ganapati.xml
@@ -30,7 +30,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-091-062-167">Andreas Doctor</editor>
             </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.3 <date>2023</date>
+                <edition>v 1.0.4 <date>2023</date>
                 </edition>
             </editionStmt>
                         <publicationStmt>
@@ -39,7 +39,7 @@
                                         is a global non-profit initiative to translate all the
                                         Buddha’s words into modern languages, and to make them
                                         available to everyone. </publisher>
-                                <availability status="1.a">
+                                <availability status="1">
                                         <p type="tantricRestriction">
                         <emph rend="bold">Warning:</emph> Readers are reminded that
                                                 according to Vajrayāna Buddhist tradition there are
@@ -189,6 +189,12 @@
                 </change>
                 <change who="#andre" when="2023-11-28T20:56:39.126Z" type="text-version" status="1.0.3" xml:id="UT22084-091-062-173">
                     <desc>glossary integration in CG revised - activated in CG</desc>
+                </change>
+                <change who="#sameer" when="2023-12-27T15:23:04.657Z" type="translation-status" status="1" xml:id="UT22084-091-062-174">
+                    <desc>1</desc>
+                </change>
+                <change who="#sameer" when="2023-12-27T15:23:04.657Z" type="text-version" status="1.0.4" xml:id="UT22084-091-062-175">
+                    <desc>Included in App v 3.9</desc>
                 </change>
                         </revisionDesc>
                 </fileDesc>
