--- a/translations/kangyur/translations/091-063_toh666-the_tantra_of_ganapati.xml
+++ b/translations/kangyur/translations/091-063_toh666-the_tantra_of_ganapati.xml
@@ -22,7 +22,7 @@
                 <consultant role="dharmaMaster" xml:id="UT22084-091-063-403">Chokyi Nyima Rinpoche</consultant>
             </titleStmt>
       <editionStmt>
-                <edition>v 1.0.5 <date>2023</date>
+                <edition>v 1.0.6 <date>2023</date>
                 </edition>
             </editionStmt>
       <publicationStmt>
@@ -30,7 +30,7 @@
                     <name>84000: Translating the Words of the Buddha</name> is a global non-profit
           initiative to translate all the Buddha’s words into modern languages, and to make them
           available to everyone. </publisher>
-        <availability status="1.a">
+        <availability status="1">
           <p type="tantricRestriction">
                         <emph rend="bold">Warning:</emph> Readers are reminded that
             according to Vajrayāna Buddhist tradition there are restrictions and commitments
@@ -158,6 +158,12 @@
                 </change>
                 <change who="#andre" when="2023-11-28T21:39:31.732Z" type="text-version" status="1.0.5" xml:id="UT22084-091-063-412">
                     <desc>glossary integration in CG revised - activated in CG</desc>
+                </change>
+                <change who="#sameer" when="2023-12-27T15:27:09.099Z" type="translation-status" status="1" xml:id="UT22084-091-063-413">
+                    <desc>1</desc>
+                </change>
+                <change who="#sameer" when="2023-12-27T15:27:09.099Z" type="text-version" status="1.0.6" xml:id="UT22084-091-063-414">
+                    <desc>Included in App v 3.9</desc>
                 </change>
       </revisionDesc>
     </fileDesc>
