--- a/translations/kangyur/translations/091-065_toh668,1085-the_incantation_of_mahakala.xml
+++ b/translations/kangyur/translations/091-065_toh668,1085-the_incantation_of_mahakala.xml
@@ -31,7 +31,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-091-065-154">Andreas Doctor</editor>
             </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.3 <date>2023</date>
+                <edition>v 1.0.4 <date>2023</date>
                 </edition>
             </editionStmt>
                         <publicationStmt>
@@ -40,7 +40,7 @@
                                         is a global non-profit initiative to translate all the
                                         Buddha’s words into modern languages, and to make them
                                         available to everyone. </publisher>
-                                <availability status="1.a">
+                                <availability status="1">
                                         <p type="tantricRestriction">
                         <emph rend="bold">Warning:</emph> Readers are reminded that
                                                 according to Vajrayāna Buddhist tradition there are
@@ -197,6 +197,12 @@
                 </change>
                 <change who="#andre" when="2023-11-29T07:39:37.213Z" type="text-version" status="1.0.3" xml:id="UT22084-091-065-162">
                     <desc>glossary matching revised - activated in CG</desc>
+                </change>
+                <change who="#sameer" when="2023-12-27T15:36:34.466Z" type="translation-status" status="1" xml:id="UT22084-091-065-163">
+                    <desc>1</desc>
+                </change>
+                <change who="#sameer" when="2023-12-27T15:36:34.466Z" type="text-version" status="1.0.4" xml:id="UT22084-091-065-164">
+                    <desc>Included in App v 3.9</desc>
                 </change>
                         </revisionDesc>
                 </fileDesc>
