--- a/translations/kangyur/translations/101-008_toh953-the_incantation_of_vajrapani_the_yaksa_king.xml
+++ b/translations/kangyur/translations/101-008_toh953-the_incantation_of_vajrapani_the_yaksa_king.xml
@@ -20,7 +20,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-101-008-94">Nathaniel Rich</editor>
             </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.3 <date>2023</date>
+                <edition>v 1.0.4 <date>2023</date>
                 </edition>
             </editionStmt>
                         <publicationStmt>
@@ -29,7 +29,7 @@
                                         is a global non-profit initiative to translate all the
                                         Buddha’s words into modern languages, and to make them
                                         available to everyone. </publisher>
-                                <availability status="1.a">
+                                <availability status="1">
                                         <p type="tantricRestriction">
                         <emph rend="bold">Warning:</emph> Readers are reminded that
                                                 according to Vajrayāna Buddhist tradition there are
@@ -162,6 +162,12 @@
                 </change>
                 <change who="#andre" when="2023-11-29T08:08:30.321Z" type="text-version" status="1.0.3" xml:id="UT22084-101-008-100">
                     <desc>glossary integration in CG revised - activated</desc>
+                </change>
+                <change who="#sameer" when="2023-12-27T15:57:45.932Z" type="translation-status" status="1" xml:id="UT22084-101-008-101">
+                    <desc>1</desc>
+                </change>
+                <change who="#sameer" when="2023-12-27T15:57:45.932Z" type="text-version" status="1.0.4" xml:id="UT22084-101-008-102">
+                    <desc>Included in App v 3.9</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
